--- a/websocket-netty/src/main/resources/templates/echo.html
+++ b/websocket-netty/src/main/resources/templates/echo.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div id="log" style="border: 1px solid #000; padding: 10px; max-height:300px; over"></div>
+<div id="log" style="border: 1px solid #000; padding: 10px; max-height:300px; overflow-y:scroll;"></div>
 
 <script src="/webjars/sockjs-client/1.1.2/sockjs.js"></script>
 <script src="/js/main.js"></script>
