--- a/websocket-netty/src/main/resources/templates/echo.html
+++ b/websocket-netty/src/main/resources/templates/echo.html
@@ -8,21 +8,21 @@
 
 <div id="log" style="border: 1px solid #000; padding: 10px; max-height:300px; overflow-y:scroll;"></div>
 
-<script src="/webjars/sockjs-client/1.1.2/sockjs.js"></script>
+<script src="/webjars/jquery/1.12.4/jquery.js"></script>
 <script src="/js/main.js"></script>
 <script>
     window.onload = function() {
-        for (var i = 0; i < 1; i++) {
+        for (var i = 0; i < 100; i++) {
             setTimeout(initSocket, 200);
         }
     }
 
     function initSocket() {
-        var m = new main("http://localhost:8000/ws/echo", "log");
+        var m = new WSocket({host:'localhost', port:8000, path:'/ws/echo'});
 
         setInterval(function () {
             try {
-                //m.send(10);
+                m.send(10);
             } catch (e) {
                 console.log(e);
             }
